# advent-of-code

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  README.org  gleam.toml  main.rb  manifest.toml
.github/workflows/: test.yml
2019/day2/: main.rb
2019/day3/: main.rb
2020/day1/: README.md
2020/day12/: README.md  part1.rb  part2.rb
2020/day13/: README.md  main.rb
2020/day14/: main.c  main.rb
2020/day16/: main.rb
2020/day18/: main.rb
2020/day2/: main.rb
c++/2015/day1/src/: CMakeLists.txt  main.cpp
data/: day01_example.txt
elixir/: README.md  docker-compose.yml  mix.exs
ruby/: Gemfile  README.md  Rakefile  aoc.rb
rust/: Cargo.toml  README.md  aoc  setup  today.sh
rust/runner/: Cargo.toml
rust/runner/src/: main.rs
rust/solutions-2021/: Cargo.toml
rust/solutions-2021/src/: lib.rs
rust/solutions-2021/src/day1/: mod.rs
rust/solutions-2021/src/day12/: mod.rs  part1.rs  part2.rs
rust/solutions-2021/src/day13/: mod.rs  part1.rs  part2.rs
rust/solutions-2021/src/day15/: mod.rs  part1.rs
rust/solutions-2021/src/day16/: mod.rs  part1.rs
rust/solutions-2021/src/day2/: mod.rs  part1.rs  part2.rs
rust/solutions-2021/src/day3/: mod.rs  part1.rs  part2.rs
rust/solutions-2021/src/day4/: mod.rs  part1.rs
rust/solutions-2021/src/day6/: mod.rs  part1.rs  part2.rs
rust/solutions-2022/: Cargo.toml
rust/solutions-2022/src/day1/: mod.rs
rust/solutions-2022/src/day2/: mod.rs  part1.rs  part2.rs
rust/solutions-2022/src/day3/: mod.rs  part1.rs  part2.rs
rust/solutions-2022/src/day4/: mod.rs  part1.rs  part2.rs
rust/solutions-2022/src/day5/: mod.rs  part1.rs  part2.rs
rust/solutions-2022/src/day6/: mod.rs  part1.rs  part2.rs
rust/solutions-2022/src/day7/: mod.rs  part1.rs
src/: advent_of_code.gleam  bridge_repair.gleam  calorie_counting.rb  camp_cleanup.rb  ceres_search.gleam  disk_fragmenter.gleam  guard_gallivant.gleam  historian_hysteria.gleam  hoof_it.gleam  main.rs  mull_it_over.gleam  no_space_left_on_device.rb  print_queue.gleam  red_nosed_reports.gleam  resonant_collinearity.gleam  rock_paper_scissors.rb  rucksack_reorganization.rb  supply_stacks.rb  template.rs  treetop_tree_house.rb  tuning_trouble.rb
test/: bridge_repair_test.gleam  calorie_counting_test.rb  camp_cleanup_test.rb  ceres_search_test.gleam  disk_fragmenter_test.gleam  guard_gallivant_test.gleam  historian_hysteria_test.gleam  hoof_it_test.gleam  mull_it_over_test.gleam  no_space_left_on_device_test.rb  print_queue_test.gleam  red_nosed_reports_test.gleam  resonant_collinearity_test.gleam  rock_paper_scissors_test.rb  rucksack_reorganization_test.rb  supply_stacks_test.rb  treetop_tree_house_test.rb  tuning_trouble_test.rb
(+304 files in other folders)
