[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
common = { path = "../common" }
ndarray = "0.15.6"
solutions-2021 = { path = "../solutions-2021" }
solutions-2015 = { path = "../solutions-2015" }
uint = "0.9.3"
