[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
common = { path = "../common" }
ndarray = "0.15.6"
aoc-utils = { path = "../aoc-utils" }
solutions-2021 = { path = "../solutions-2021" }
solutions-2015 = { path = "../solutions-2015" }
solutions-2018 = { path = "../solutions-2018" }
solutions-2022 = { path = "../solutions-2022" }
uint = "0.9.3"
tokio = { version = "1.21.2", features = ["full"] }
tl = "0.7.7"
chrono = { version = "0.4.23", features = ["serde"] }
