[package]
name = "solutions-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
itertools = "0.10.5"
nom = "7.1.1"
petgraph = "0.6.2"
rayon = "1.6.0"
uint = "0.9.3"
